# Vulkan-Engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  all_files.txt  file_c.py  main.cpp  pt.py  tt.py  vulkan_files.txt
plugins/null/: CMakeLists.txt  NullBAckend.cpp  NullBackend.hpp
plugins/vulkan/: CMakeLists.txt  Vertex.h  VulkanAllocator.h  VulkanBackend.cpp  VulkanBackend.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommand.cpp  VulkanCommand.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSync.cpp  VulkanSync.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTypes.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanUtils.cpp  VulkanUtils.h
shaders/: basic.frag  basic.vert  cube.frag  cube.vert
src/: CMakeLists.txt
src/app/Sandbox3D/: CubeSetup.cpp  CubeSetup.hpp  main.cpp
src/backend/: RenderDevice.cpp  RenderDevice.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommand.cpp  VulkanCommand.h  VulkanDescriptor.cpp  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSync.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h
src/backend/include/: Handles.h  IRenderBackend.h
src/core/: Application.cpp  Application.h  Config.cpp  Config.h  Logger.cpp  Time.cpp  Time.h
src/core/jobs/: JobSystem.cpp  JobSystem.h
src/core/math/: Mat3.hpp  Mat4.hpp  Quat.hpp  Simd128.hpp  Transform.hpp  Vec.hpp
src/core/memory/: LinearAllocator.hpp
src/core/util/: FileSystem.cpp  FileSystem.h  Logger.cpp  Logger.h  Time.cpp  Time.h  core.hpp
src/graphics/data/: CubeVerts.hpp
src/graphics/render/: RenderGraph.cpp  RenderGraph.h  RenderPass.h  RenderResource.h
src/platform/: Input.cpp  Input.h  Window.cpp  Window.h
src/renderer/: IRenderer.h  IShader.h  RenderCommand.cpp  RenderCommand.h
src/resources/: Mesh.cpp  Mesh.h  ResourceManager.cpp  ResourceManager.h  ShaderLoader.cpp  ShaderLoader.h  Texture.cpp  Texture.h  UniformBuffer.h
src/scene/: Camera.cpp  Camera.h  SceneObject.cpp  SceneObject.h  Transform.cpp  Transform.h  Vertex.h
src/utils/: FileSystem.cpp  MathUtils.cpp  MathUtils.h
tests/: CMakeLists.txt  test_jobs.cpp  test_mat3.cpp  test_mat4.cpp  test_mat4_inverse.cpp  test_mat4_simd.cpp  test_math.cpp  test_simd.cpp  test_transform.cpp  test_util.cpp
